# wwsm

./: .gitignore  Readme.md  ToDo  ToDo.md  package-lock.json
assets/: inital_values.csv  initial_values_test.csv  sin1.csv  xgrid.csv  ygrid.csv
backend/: InfoServer.py  InitValCreator.py  InitValueServer.py  ScoreHandler.py
compute-engine/: Cargo.toml  index.html  start.sh
compute-engine/site/: bootstrap.js  index.html  index.js  package-lock.json  package.json  scorePage.html  scorePage.js
compute-engine/src/: display_scene.rs  http_handler.rs  lib.rs  wasm_comm.rs
hello-wasm/: Cargo.toml
hello-wasm/site/: index.html  index.js  package-lock.json  webpack.config.js
hello-wasm/src/: lib.rs
math-utils/: Cargo.toml
math-utils/src/: asset_reader.rs  constants.rs  fft2d_manager.rs  fft_manager.rs  lib.rs  main.rs  param.rs  pde_solver.rs  shallow_water_solution.rs  shallow_water_solver.rs  utils.rs  wave_equation_solver.rs
math-utils/src/utils/: array_tools.rs  constants.rs  fft2d_manager.rs  fft_manager.rs
sandbox/: Cargo.toml
sandbox/src/: helper.rs  main.rs
sandbox/src/helper/: constants.rs  helper2.rs
source_cargo/: Cargo.toml
source_cargo/hello-wasm/: Cargo.toml
source_cargo/hello-wasm/src/: lib.rs
source_cargo/src/: main.rs
