[package]
name = "compute-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.39"
more-asserts = "0.3.1"
math-utils = {path = "../math-utils"}


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3