[package]
name = "compute-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.196"
serde_json = "1.0.113"
schemars = "0.8.16"
futures = "0.3"
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
wasm-bindgen = "0.2.39"
more-asserts = "0.3.1"
math-utils = {path = "../math-utils"}


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3